# SensorMotor

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
.cache/clangd/index/: hdc1080_driver.c.05D4B1F9222CA1D6.idx  hdc1080_driver.h.3A05A995F51B0843.idx  main.c.8BF455CEAE6BC6EC.idx  motor_driver.c.FC80E15B2ECE1089.idx  motor_driver.h.2E81DB43ED123ABB.idx
include/private/: button.h  display.h  display_driver.h  error.h  hdc1080_driver.h  motor.h  motor_driver.h  pixel.h  sensor.h  sensor_driver.h  system_code.h  system_error.h
source/: WS2812.cpp  button.c  button.cpp  display.c  display.cpp  display_driver.c  display_driver.cpp  error.c  hdc1080_driver.c  main.c  main.cpp  motor.c  motor.cpp  motor_driver.c  motor_driver.cpp  pixel.cpp  sensor.c  sensor.cpp  sensor_driver.c  sensor_driver.cpp  system_error.c  system_error.cpp
